--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -2,12 +2,20 @@
     --header-height: 60px;
     --navigation-height: 60px;
 
-    --primary: #004224;
-    --secondary: #423a2b;
+    --g-green: #004224;
+    --g-brown: #423a2b;
+    --g-beige: #f8f0f5;
+    --g-beige-alt: #ece6eb;
 
-    --background: var(--primary);
+    --primary: var(--g-green);
+    --secondary: var(--g-brown);
+    --tertiary: var(--g-beige);
 
-    --text: #f8f0f5;
+    --background: var(--g-beige);
+    --surface: var(--g-beige-alt);
+
+    --text: var(--g-brown);
+    --alternate-text: var(--g-beige);
 
     box-sizing: border-box;
 }
@@ -90,7 +98,7 @@ input {
         justify-content: center;
         align-items: center;
 
-        color: var(--text);
+        color: var(--alternate-text);
     }
 
     & a svg {
@@ -229,7 +237,7 @@ input {
 
     background-color: var(--secondary);
 
-    box-shadow: 0 3px 8px 0 #00000055;
+    box-shadow: 0 3px 8px 0 #00000077;
 
     & a {
         display: flex;
@@ -239,7 +247,7 @@ input {
         width: 100%;
         height: 100%;
 
-        color: var(--text);
+        color: var(--alternate-text);
         text-decoration: none;
     }
 }
@@ -269,17 +277,24 @@ input {
     padding-top: 1rem;
 
     & h2 {
-        margin: 0 0 0 1rem;
+        margin: 0.4rem 0 0.8rem 1rem;
         font-size: 1rem;
     }
 
-    & .settings-category-group {
+    & .settings-category-group, .settings-group {
         display: flex;
         flex-direction: column;
 
-        background-color: var(--secondary);
+        background-color: var(--surface);
+        border-radius: 1rem;
 
         margin: 0 1rem 1rem 1rem;
+
+        & hr {
+            width: 100%;
+            border: none;
+            border-top: 1px solid var(--tertiary);
+        }
     }
 
     & .setting-category {
@@ -293,6 +308,7 @@ input {
         padding: 1rem;
         text-decoration: none;
         color: var(--text);
+        border-radius: 1rem;
 
         & svg {
             width: 2rem;
@@ -300,12 +316,22 @@ input {
         }
     }
 
-    & .settings-group {
+    & .setting {
         display: flex;
         flex-direction: column;
-        margin: 0 1rem 1rem 1rem;
-        background-color: var(--secondary);
+
+        width: 100%;
+        gap: 0.5rem;
+
         padding: 1rem;
+        text-decoration: none;
+        color: var(--text);
+        border-radius: 1rem;
+
+        & svg {
+            width: 2rem;
+            height: 100%;
+        }
     }
 
     & form {
@@ -335,7 +361,13 @@ input {
     flex-direction: row;
     gap: 1rem;
 
+    & span {
+        display: flex;
+        align-items: center;
+    }
+
     & svg, img {
+        border-radius: 500px;
         height: 100%;
         aspect-ratio: 1;
     }
