--- a/Gilbert/src/main/resources/templates/profile/settings/account.html
+++ b/Gilbert/src/main/resources/templates/profile/settings/account.html
@@ -6,7 +6,7 @@
 <body>
 <section layout:fragment="settings-content">
     <nav class="settings-nav">
-        <a th:href="@{'/profile/@' + ${profileUser.getUsername()} + '/settings'}">
+        <a th:href="@{/profile/me/settings}">
             <svg viewBox="0 0 1024 1024">
                 <use href="#backIcon"/>
             </svg>
@@ -16,7 +16,7 @@
     <div class="settings-column">
         <h2>Account information</h2>
         <div class="settings-group">
-            <form method="post" th:action="@{'/profile/@' + ${profileUser.getUsername()} + '/settings/account/pfp' }" enctype="multipart/form-data">
+            <form class="setting" method="post" th:action="@{/profile/me/settings/account/pfp}" enctype="multipart/form-data">
                 <label class="pfp-selector" for="profilePicture">
                     <img th:if="${profileUser.getProfilePictureId().isPresent()}" th:src="@{'/profile/@' + ${profileUser.getUsername()} + '/pfp'}" alt="profile picture for someone">
                     <svg th:if="${profileUser.getProfilePictureId().isEmpty()}" viewBox="0 0 24 24">
@@ -26,9 +26,8 @@
                 </label>
                 <input id="profilePicture" type="file" name="profilePicture" accept="image/png, image/jpeg" style="display: none" onchange="this.form.submit()">
             </form>
-        </div>
-        <div class="settings-group">
-            <form onsubmit="return confirm('Are you sure you want to update your profile?')" method="post" th:action="@{'/profile/@' + ${profileUser.getUsername()} + '/settings/account/details'}">
+            <hr />
+            <form class="setting" onsubmit="return confirm('Are you sure you want to update your profile?')" method="post" th:action="@{/profile/me/settings/account/details}">
                 <label for="displayName">Display name</label>
                 <input id="displayName" type="text" name="displayName" th:value="${profileUser.getDisplayName()}">
 
@@ -44,7 +43,7 @@
 
         <h2>Security</h2>
         <div class="settings-group">
-            <form method="post" th:action="@{'/profile/@' + ${profileUser.getUsername()} + '/settings/account/password'}" onsubmit="return confirm('Are you sure you want to update your password? You will be logged out.')">
+            <form class="setting" method="post" th:action="@{/profile/me/settings/account/password}" onsubmit="return confirm('Are you sure you want to update your password? You will be logged out.')">
                 <label for="currentPassword">Current password</label>
                 <input id="currentPassword" type="password" name="currentPassword">
                 <label for="newPassword">New password</label>
@@ -55,7 +54,7 @@
 
         <h2>Account administration</h2>
         <div class="settings-group">
-            <form onsubmit="return confirm('Are you sure you want to delete your profile?')" method="post" th:action="@{'/profile/@' + ${profileUser.getUsername()} + '/settings/account/delete'}">
+            <form class="setting" onsubmit="return confirm('Are you sure you want to delete your profile?')" method="post" th:action="@{/profile/me/settings/account/delete}">
                 <button>Delete account</button>
             </form>
         </div>
