Add favorites and fragmented post html

--- a/Gilbert/src/main/resources/templates/fragments/navigation.html
+++ b/Gilbert/src/main/resources/templates/fragments/navigation.html
@@ -13,8 +13,8 @@
         </svg>
     </a>
     <a class="favorites" href="/profile/me/favorites">
-        <svg viewBox="0 0 24 24">
-            <use href="#favoriteIcon" />
+        <svg viewBox="0 0 24 24" >
+            <use href="#favoriteOutlined" />
         </svg>
     </a>
     <a class="notifications" href="/profile/me/notifications">
