--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -53,16 +53,16 @@ input {
     stroke-width: 2;
     stroke-linecap: round;
     stroke-linejoin: round;
+}
 
-    &.outlined {
-        fill: none;
-        stroke: currentColor;
-    }
+.outlined {
+    fill: none;
+    stroke: currentColor;
+}
 
-    &.filled {
-        fill: currentColor;
-        stroke: none;
-    }
+.filled {
+    fill: currentColor;
+    stroke: none;
 }
 
 .app-header {
@@ -260,6 +260,10 @@ input {
     }
 }
 
+.profile-page-content {
+    padding: 1rem;
+}
+
 .settings-nav {
     width: 100%;
 
@@ -378,5 +382,115 @@ input {
         border-radius: 500px;
         height: 100%;
         aspect-ratio: 1;
+    }
+}
+
+.posts-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+@media (max-width: 992px) {
+    .posts-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 768px) {
+    .posts-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+.post-card {
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    text-decoration: none;
+
+    & .favorite-button {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        border-radius: 500px;
+        width: 3rem;
+        height: 3rem;
+        padding: 0.5rem;
+
+        & svg {
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    &:hover {
+        transform: translateY(-5px);
+    }
+
+    & .post-image {
+        border-bottom: 1px solid #eee;
+        height: 150px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    & .post-info {
+        padding: 15px;
+    }
+
+    & .post-name {
+        font-size: 1.1rem;
+        font-weight: bold;
+        margin-bottom: 5px;
+        color: #333;
+    }
+
+    & .post-price {
+        font-size: 1.2rem;
+        font-weight: bold;
+        color: var(--text);
+        margin-bottom: 10px;
+    }
+
+    & .post-seller {
+        font-size: 0.9rem;
+        color: #666;
+    }
+
+    & .post-details {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 10px;
+        font-size: 0.8rem;
+        color: #999;
+    }
+
+    & .post-condition {
+        background-color: #f5f5f5;
+        padding: 3px 8px;
+        border-radius: 12px;
+    }
+
+    & .seller-name {
+        color: #050505;
+        font-weight: bold;
     }
 }
