--- a/Gilbert/src/main/resources/templates/layout.html
+++ b/Gilbert/src/main/resources/templates/layout.html
@@ -6,11 +6,12 @@
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE"></title>
 
     <link rel="stylesheet" href="/main.css"/>
+    <script src="https://unpkg.com/htmx.org@2.0.4"></script>
 </head>
 <body>
-<nav th:replace="~{/fragments/navigation :: navigation}"></nav>
 <svg th:replace="~{/fragments/icons :: icons}"></svg>
 <section layout:fragment="content"></section>
 <div style="height: 150px;"></div>
+<nav th:replace="~{/fragments/navigation :: navigation}"></nav>
 </body>
 </html>
