Profile picture shown when logged in

--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -112,6 +112,12 @@ input {
         height: 100%;
         aspect-ratio: 1;
     }
+
+    & a img {
+        height: 110%;
+        aspect-ratio: 1;
+        border-radius: 500px;
+    }
 }
 
 .auth-body {
