--- a/Gilbert/src/main/resources/templates/fragments/navigation.html
+++ b/Gilbert/src/main/resources/templates/fragments/navigation.html
@@ -7,7 +7,7 @@
             <use href="#homeIcon" />
         </svg>
     </a>
-    <a class="search" href="/posts">
+    <a class="search" href="/search">
         <svg viewBox="0 0 24 24">
             <use href="#searchIcon" />
         </svg>
