--- a/Gilbert/src/main/resources/templates/search/layout.html
+++ b/Gilbert/src/main/resources/templates/search/layout.html
@@ -4,14 +4,12 @@
 <body>
 <section class="search-content" layout:fragment="content">
     <div class="search-header">
+        <h1>Search</h1>
         <form action="/search" method="get">
             <label>
                 <input placeholder="Search" type="search" name="query">
             </label>
         </form>
-    </div>
-    <div>
-        Categories
     </div>
     <div class="container">
         <div id="search-results" class="posts-grid">
