adminpanel + changes to enum names for userroles to fit the naming conventions

--- a/Gilbert/src/main/resources/templates/post/details.html
+++ b/Gilbert/src/main/resources/templates/post/details.html
@@ -194,6 +194,9 @@
             </form>
             </div>
         </div>
+        <button hx-post="/profile/me/favorites/1" hx-swap="none">favorite
+
+        </button>
     </div>
 </div>
 </section>
