--- a/Gilbert/src/main/resources/templates/profile/settings/index.html
+++ b/Gilbert/src/main/resources/templates/profile/settings/index.html
@@ -23,6 +23,14 @@
                 <span>Account</span>
             </a>
         </div>
+        <div class="settings-category-group">
+            <a class="setting-category" href="/adminpanel">
+                <svg viewBox="0 0 24 24">
+                    <use href="#profileIcon"/>
+                </svg>
+                <span>AdminPanel</span>
+            </a>
+        </div>
 
         <h2>Help</h2>
         <div class="settings-category-group">
