--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -66,19 +66,82 @@ input {
 }
 
 .app-header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row;
+
     height: var(--header-height);
     width: 100%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: var(--primary);
 
-    & a {
-        height: 100%;
+    & nav {
     }
 
-    & a img {
+    & a {
+        text-decoration: none;
+        color: var(--alternate-text);
+    }
+
+    & svg {
         height: 100%;
+        cursor: pointer;
+        color: var(--alternate-text);
+    }
+
+    & label[for="menuToggle"] {
+        height: 100%;
+        z-index: 120;
+    }
+
+    & #nav-menu {
+        position: fixed;
+        top: 0;
+        right: 0;
+        opacity: 0;
+        z-index: 100;
+
+        transition: 0.3s;
+
+        width: 100vw;
+        height: 100vh;
+
+        backdrop-filter: blur(3px);
+        color: var(--alternate-text);
+        background-color: #00000000;
+
+        padding-top: var(--header-height);
+        pointer-events: none;
+
+        cursor: pointer;
+
+        & summary, a {
+            display: flex;
+            align-items: center;
+            height: 4rem;
+            transition: 1s;
+            font-size: 1.3rem;
+        }
+
+        & a {
+            padding-left: 2rem;
+        }
+
+        & details {
+            display: flex;
+            align-items: center;
+            padding-left: 2rem;
+            transition: 1s;
+        }
+    }
+
+    & #menuToggle:checked ~ #nav-menu {
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+        background-color: #00000066;
+        pointer-events: all;
     }
 }
 
