Implementation of a treestructure for creating category menu

--- a/Gilbert/src/main/resources/templates/fragments/header.html
+++ b/Gilbert/src/main/resources/templates/fragments/header.html
@@ -10,21 +10,11 @@
     </label>
 
     <nav id="nav-menu">
-        <details>
-            <summary>Men</summary>
-            <a href="/search">Something 1</a>
-            <a href="/search">Something 2</a>
-        </details>
-        <details>
-            <summary>Women</summary>
-            <a href="/search?categories=1">Something 1</a>
-            <a href="/search">Something 2</a>
-            <details>
-                <summary>Tops</summary>
-                <a href="/search">Something 1</a>
-                <a href="/search">Something 2</a>
-            </details>
-        </details>
+        <!--/*@thymesVar id="categoryTree" type="dk.zealandcs.gilbert.domain.tree.Tree"*/-->
+        <th:block th:each="category : ${categoryTree.getRoots()}">
+            <details th:unless="${categoryTree.getChildrenNodes(category).isEmpty()}" th:include="/fragments/category_fragment :: category" th:with="category=${category},categories=${categoryTree.getChildrenNodes(category)},categoryTree=${categoryTree}"></details>
+            <a th:if="${categoryTree.getChildrenNodes(category).isEmpty()}" th:href="@{/search(categories=${category.getId()})}" th:text="${category.getValue().getName()}"></a>
+        </th:block>
     </nav>
 </header>
 </body>
