--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -107,6 +107,8 @@ input {
         width: 100vw;
         height: 100vh;
 
+        overflow-y: auto;
+
         backdrop-filter: blur(3px);
         color: var(--alternate-text);
         background-color: #00000000;
@@ -140,7 +142,7 @@ input {
         width: 100%;
         height: 100%;
         opacity: 1;
-        background-color: #00000066;
+        background-color: #00000088;
         pointer-events: all;
     }
 }
