--- a/Gilbert/src/main/resources/templates/post/post_fragment.html
+++ b/Gilbert/src/main/resources/templates/post/post_fragment.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
 <html lang="da">
+<head>
+    <script>
+
+    </script>
+</head>
 <body>
-<a th:fragment="post" th:href="@{/posts/{id}(id=${post.id})}" class="post-card">
-    <div class="post-image">
-        <img th:if="${post.getImageId().isPresent()}"
-             th:src="@{/images/{id}(id=${post.imageId})}"
-             alt="Product Image"
-        >
+<div th:fragment="post" class="post-card">
+    <a th:href="@{/posts/{id}(id=${post.id})}">
+        <div class="post-image">
+            <img th:if="${post.getImageId().isPresent()}"
+                 th:src="@{/images/{id}(id=${post.imageId})}"
+                 alt="Product Image"
+            >
 
-        <svg th:if="${post.getImageId().isEmpty()}" viewBox="0 0 24 24">
-            <use href="#missingIcon"/>
+            <svg th:if="${post.getImageId().isEmpty()}" viewBox="0 0 24 24">
+                <use href="#missingIcon"/>
+            </svg>
+        </div>
+
+        <div class="post-info">
+            <h3 class="post-name" th:text="${post.name}">Post Name</h3>
+            <div class="post-details">
+                <span th:text="${post.brand != null ? post.brand.name : 'No Brand'}">Brand</span>
+                <span class="post-price" th:text="${'€' + #numbers.formatDecimal(post.price, 1, 2)}">€0.00</span>
+            </div>
+            <div class="post-details">
+                <span th:text="${post.size}">Size</span>
+                <span class="post-condition" th:text="${post.condition}">Condition</span>
+            </div>
+        </div>
+    </a>
+
+    <button th:if="${currentUserFavorites.contains(post)}" class="favorite-button" th:onclick="|fetch('/profile/me/favorites/${post.getId()}/delete', { method: 'POST' })|">
+        <svg viewBox="0 0 24 24" class="filled">
+            <use href="#favoriteIcon" />
         </svg>
-    </div>
-
-    <div class="post-info">
-        <h3 class="post-name" th:text="${post.name}">Post Name</h3>
-        <div class="post-details">
-            <span th:text="${post.brand != null ? post.brand.name : 'No Brand'}">Brand</span>
-            <span class="post-price" th:text="${'€' + #numbers.formatDecimal(post.price, 1, 2)}">€0.00</span>
-        </div>
-        <div class="post-details">
-            <span th:text="${post.size}">Size</span>
-            <span class="post-condition" th:text="${post.condition}">Condition</span>
-        </div>
-    </div>
-</a>
+    </button>
+    <button th:unless="${currentUserFavorites.contains(post)}" class="favorite-button" th:onclick="|fetch('/profile/me/favorites/${post.getId()}', { method: 'POST' })|">
+        <svg viewBox="0 0 24 24" class="outlined">
+            <use href="#favoriteIcon" />
+        </svg>
+    </button>
+</div>
 </body>
 </html>
